--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,13 +10,25 @@ cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-sing
 cortex-m-rt = "0.7.3"
 defmt = { version = "0.3.8", optional = true }
 defmt-rtt = { version = "0.4.1", optional = true }
+display-interface = "0.4.1"
+display-interface-spi = "0.4.1"
 embassy-executor = { version = "0.6.0", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
 embassy-futures = "0.1.1"
 embassy-stm32 = { version = "0.1.0", features = ["memory-x", "stm32h750vb", "time-driver-any", "exti", "unstable-pac"] }
 embassy-sync = "0.6.0"
 embassy-time = { version = "0.3.2", features = ["tick-hz-32_768"] }
+embassy-usb = { version = "0.3.0", features = ["defmt"] }
+embedded-graphics = "0.7"
+embedded-graphics-core = "0.4.0"
+embedded-hal = "0.2.7"
+embedded-hal-bus = { version = "0.2.0", features = ["async"] }
+heapless = "0.8.0"
+icm426xx = { version = "0.2.4", features = ["async"] }
 panic-halt = "0.2.0"
 panic-probe = { version = "0.3.2", features = ["print-defmt"], optional = true }
+st7789 = "0.7.0"
+static_cell = "2.1.0"
+tinybmp = "0.6.0"
 
 [[bin]]
 name = "imViewer"
