--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ embassy-executor = { version = "0.6.0", features = ["arch-cortex-m", "executor-t
 embassy-futures = "0.1.1"
 embassy-stm32 = { version = "0.1.0", features = ["memory-x", "stm32h750vb", "time-driver-any", "exti", "unstable-pac"] }
 embassy-sync = "0.6.0"
-embassy-time = { version = "0.3.2", features = ["tick-hz-32_768"] }
+embassy-time = { version = "0.3.2", features = ["tick-hz-10_000_000"] }
 embassy-usb = { version = "0.3.0", features = ["defmt"] }
 embedded-graphics = "0.8.1"
 embedded-hal = "0.2.7"
